# gradio_navbar

./: .gitignore  README.md  pyproject.toml
backend/gradio_navbar/: __init__.py  navbar.py
demo/: app.py  requirements.txt  space.py
frontend/: Example.svelte  Index.svelte  package-lock.json  package.json
