[build-system]
requires = [
  "hatchling",
  "hatch-requirements-txt",
  "hatch-fancy-pypi-readme>=22.5.0",
]
build-backend = "hatchling.build"

[project]
name = "gradio_navbar"
version = "0.0.1"
description = "Gradio custom navbar component"
readme = "README.md"
license = "apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "Thibaud Perrin", email = "t.perrin@digitalkin.ai" }]
keywords = ["gradio-custom-component", "gradio", "navbar", "navar-component", "gradio-navbar", "UI-component"]
# Add dependencies here
dependencies = ["gradio>=5.0,<7.0"]
classifiers = [
  'Development Status :: 3 - Alpha',
  'Operating System :: OS Independent',
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: 3 :: Only',
  'Programming Language :: Python :: 3.8',
  'Programming Language :: Python :: 3.9',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'Topic :: Scientific/Engineering',
  'Topic :: Scientific/Engineering :: Artificial Intelligence',
  'Topic :: Scientific/Engineering :: Visualization',
]

[project.urls]
repository = "https://github.com/DigitalKin-ai/gradio_navbar"
# space = "your space url"

[project.optional-dependencies]
dev = ["build", "twine"]

[tool.hatch.build]
artifacts = ["/backend/gradio_navbar/templates", "*.pyi"]

[tool.hatch.build.targets.wheel]
packages = ["/backend/gradio_navbar"]
